--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -13,10 +13,10 @@
 #Fri Sep 06 13:15:48 CST 2024
 Swisseph_compileSdkVersion=31
 Swisseph_kotlinVersion=1.7.0
-Swisseph_minSdkVersion=21
+Swisseph_minSdkVersion=24
 Swisseph_ndkversion=21.4.7075529
 Swisseph_targetSdkVersion=31
 android.enableJetifier=true
 android.useAndroidX=true
 newArchEnabled=true
-org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.2/libexec/openjdk.jdk/Contents/Home
+org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
