--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-swisseph",
-  "version": "0.1.12",
+  "version": "0.1.15",
   "description": "test",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
@@ -45,17 +45,18 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/linchCN/react-native-swisseph.git"
+    "url": "git+https://github.com/slashsingh/react-native-swisseph.git"
   },
-  "author": "linch <369955292@qq.com> (https://github.com/linchCN)",
+  "author": "Vishal Singh <smartvishalsingh@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/linchCN/react-native-swisseph/issues"
+    "url": "https://github.com/slashsingh/react-native-swisseph/issues"
   },
-  "homepage": "https://github.com/linchCN/react-native-swisseph#readme",
+  "homepage": "https://github.com/slashsingh/react-native-swisseph#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "private": true,
   "devDependencies": {
     "@babel/plugin-transform-private-methods": "^7.25.4",
     "@commitlint/config-conventional": "^17.0.2",
@@ -72,8 +73,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
-    "react-native": "0.75.3",
-    "react-native-builder-bob": "^0.30.0",
+    "react-native": "^0.79.1",
+    "react-native-builder-bob": "^0.40.5",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2"
@@ -166,5 +167,8 @@
     "type": "module-new",
     "languages": "cpp",
     "version": "0.41.0"
+  },
+  "dependencies": {
+    "@react-native/gradle-plugin": "^0.75.1"
   }
 }
